feat: background styles

--- a/styles/base.pcss
+++ b/styles/base.pcss
@@ -1,4 +1,5 @@
 @import "./reset.pcss";
+@import "./global.pcss";
 @import "./text-field.pcss";
 @import "./form.pcss";
 @import "./label.pcss";
@@ -12,3 +13,4 @@
 @import "./modal.pcss";
 @import "./dialog.pcss";
 @import "./variables.pcss";
+@import "./article.pcss";
