--- a/styles/article.pcss
+++ b/styles/article.pcss
@@ -1,12 +1,12 @@
 article {
   $space-s: 16px;
-  $space-m: 24px;
-  $space-l: 32px;
+  $space-m: 40px;
+  $space-l: 48px;
   $space-xl: 40px;
 
   font-family: "Quicksand", "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
-  color: #444444;
+  color: #333333;
 
   .nuxt-content {
     margin-top: 64px;
@@ -47,7 +47,7 @@ article {
     }
   }
   p {
-    margin: $space-m 0 0;
+    margin: $space-s 0 0;
     font-size: 16px;
     line-height: 32px;
   }
@@ -58,7 +58,7 @@ article {
     }
   }
   .nuxt-content-highlight {
-    margin-top: $space-m;
+    margin-top: $space-s;
   }
   pre {
     border: 1px solid #efefef;
@@ -67,7 +67,7 @@ article {
   }
   iframe {
     display: block;
-    margin: $space-l auto;
+    margin: auto;
     border: 1px solid #efefef;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.32);
