--- a/styles/article.pcss
+++ b/styles/article.pcss
@@ -11,6 +11,16 @@ article {
   .nuxt-content {
     margin-top: 64px;
   }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    line-height: 1.5;
+  }
+
   h1 {
     margin-top: $space-l;
     font-size: 28px;
